=============
Release Notes
=============

2.0.0
-----
 - major refactor, drop support for lower than py 3.11 and DJ4.2
 - drop pytest, use unitests / runtests.py 
 - replace rel.to with related_model (Django 4.2)
 - remove deprecated `process_requests`
 - add more specific exception handling
 - add MULTISITE_REGISTER_POST_MIGRATE_SYNC_ALIAS settings attr
   to allow user to connect signal outside of multisite
 - drop template loader code. Maybe add back later
 - remove unused ThreadLocalsMiddleware

1.9.0
-----

* Fix tldextract version 3.0.0 breaking changes (Issue #72 / PR #74)
* Fix test requirements missing Django
* Fix Pluggy dependency version conflict
* Remove support for Python 3.5 / Django < 1.11

1.8.0
----------

- Support for Django 3.0 (PR #68 - thanks @erikvw)
- Fix middleware usage post Django 2.0 (PR #69 thanks @mihalikv)

1.7.0
-----

* Support Django 2.1 and 2.2 (PR #59 - thanks @ribeiroti!)
* Replace queryset with get_queryset in admin (PR #61 - thanks @vit-ivanov!)

1.6.0
-----
* Fix KeyError from _get_site_by_id
* Drop support for Django 1.7
* Remove unnecessary cache type warnings
* Remove deprecated SiteIDHook

1.5.0
-----
* Support Django 2.0 (PR #47 and #60)
* Remove code for Django < 1.7
* Remove obsolete PathAssistedCurrentSiteManager
* Remove obsolete template.loaders.cached
* Update README to better describe local development setup

1.4.1
-----
* Specify Django <2.0 in setup.py
* Drop support for python 3.3

1.4.0
-----
* Support Django 1.10 (PR #38) and 1.11
* Support Python 3
* Remove support for Django <1.7
* Use setuptools over distutils, and integrate the tests with them
* Use pytest and tox for testing
* Set up CI with travis
* Set up coverage and coveralls.io
* Document MULTISITE_EXTRA_HOSTS in README

1.3.1
-----

* Add default for SiteID in the README (PR #31)
* Respect the CACHE_MULTISITE_ALIAS in SiteCache (PR #34)
* Replace deprecated ExtractResult().tld with .suffic (PR #32)

1.3.0
-----
