@@ -2,6 +2,11 @@
 Release Notes
 =============
 
+unreleased
+----------
+- change from VlaueError to multisite specific exceptions
+  when getting default SITE_ID in development mode.
+
 2.0.0
 -----
  - major refactor, drop support for lower than py 3.11 and DJ4.2
